# samples

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
01-getting-started/: README.md
01-getting-started/00-first-agent/: getting-started-with-strands-agents.ipynb
01-getting-started/08-swarm-agent/: swarm.ipynb
01-getting-started/11-lambda-deployment/: deploy-agent.ipynb
01-getting-started/12-fargate-deployment/: deploy-agent.ipynb
01-getting-started/14-a2a-agent/: README.md  pyproject.toml
01-getting-started/14-memory-agent/: personal_agent_with_memory.py
01-getting-started/14-memory-persistent-agents/: companion_agent.ipynb  requirements.txt  therapist_agent.ipynb  tutor_agent.ipynb
01-tutorials/: README.md
01-tutorials/01-fundamentals/: README.md
02-agents/05-building-analytics-agent/: .gitignore  README.md  app.py
02-samples/: README.md
02-samples/01-sql-assistant-mcp/: README.md  main.py  pyproject.toml
02-samples/02-aws-assistant-mcp/: README.md
02-samples/03-aws-assistant-mcp/: README.md  pyproject.toml
02-samples/03-startup-advisor-mcp/: README.md
02-samples/04-startup-advisor-mcp/: README.md
02-samples/05-building-analytics-agent/: README.md
02-samples/05-code-assistant/: main.py  prompts.py  pyproject.toml
02-samples/05-hedge-fund-analyst-multi-agent-system/: .env.template  .gitignore  README.md  config.yaml  multi-agentic-system-strands.ipynb  pyproject.toml  utils.py
02-samples/05-hedge-fund-analyst-multi-agent-system/journal/: 2025-05-23.md
02-samples/05-personal-assistant/: README.md
02-samples/05-streamlit-ui-strands-agent-assistant/: README.md  requirements.txt  streamlit_app.py
02-samples/05-video-games-sales-assistant-with-strands-agents-sdk/: README.md
02-samples/06-code-assistant/: main.py  tools.py
02-samples/06-finance-assistant-swarm-agent/: README.md
02-samples/06-persistent-session-kurrentdb/: README.md  example_usage.py  requirements.txt
02-samples/06-whatsapp-fintech-sample/: README.md  template.yaml
02-samples/07-Multi-Agent-datawarehouse-Query-Optimiser/: READEME.md  app.py  requirements.txt
02-samples/07-multi-modal-email-assistant-agent/: README.md  __init__.py  kb_rag.py
02-samples/07-whatsapp-fintech-sample/: README.md  template.yaml
02-samples/08-Multi-Agent-datawarehouse-Query-Optimiser/: READEME.md  main.py  pyproject.toml
02-samples/08-aws-audit-assistant/: README.md  ai_assistant.py  requirements.txt  strands_boto_agent.py
02-samples/08-data-warehouse-optimizer/: README.md  main.py  pyproject.toml
02-tools/: README.md
03-integrations/: README.md
03-integrations/elasticache/: .env.example  README.md  architecture.mmd  architecture.txt  main.py  pyproject.toml  requirements.txt
03-integrations/elasticache/tests/: test_main.py
03-integrations/persistent-session-kurrentdb/: kurrentdb_session_manager.py  main.py  pyproject.toml
04-UX-demos/: README.md
04-UX-demos/01-streamlit-ui-strands-agent-assistant/: README.md  config_file.py  main.py  pyproject.toml
04-ux/: README.md
(+179 files in other folders)
