[project]
name = "strands-agents-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "jsonschema>=4.24.0",
    "mcp>=1.6.0",
    "retrying>=1.3.4",
    "watchdog>=6.0.0",
]
