[project]
name = "01-streamlit-ui-strands-agent-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.30",
    "botocore>=1.38.30",
    "logging>=0.4.9.6",
    "strands-agents>=0.1.0",
    "streamlit>=1.45.1",
]
